# wizmsg

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: tests.yml
tests/: test_byte_interface.py  test_protocol.py
wizmsg/: __init__.py  byte_interface.py  client.py  concepts.py  connection.py  constants.py  protocol.py  protocol_definition.py  server.py  session.py
wizmsg/network/: __init__.py  control_message.py  controls.py  data_message.py  processor.py  protocol.py
