[tool.poetry]
name = "wizmsg"
version = "0.1.0"
description = ""
authors = ["StarrFox <starrfox6312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
hypothesis = "^6.68.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
